package scalogger

object Direction extends Enumeration {
  type Direction = Value
  val UP, DOWN, RIGHT, LEFT = Value
}
